--- a/src/webparts/clockInClockOut/StopWatch/StopWatch.module.scss
+++ b/src/webparts/clockInClockOut/StopWatch/StopWatch.module.scss
@@ -1,20 +1,14 @@
 @import '~@fluentui/react/dist/sass/References.scss';
 
 .StopWatch{
-    width: auto;
     height: 400px;
-    border-radius: 10px ;
-    box-shadow: rgb(204, 204, 204) 0px 2px 6px;
-    background-color: #ffffff;
+   // border-radius: 0px ;
+    color: #000000;
 }
 
 .Header{
-    margin-left: 8px;
-    margin-right: 8px;
-    height: 60px;
-    background-color: #f3f2f1;
-    border-radius: 10px;
-    color: #006069;
+    height: 50px;   
+    color: #000000;
     display: flex;
     flex-direction: row;
     justify-content: left;
@@ -23,7 +17,8 @@
 .webpartTitle{
     font-size: 18px;
     font-weight: 700;
-    padding-left: 10px;
+   font-family: "Eastman-Bold";
+    border-bottom:  2px solid #FF8FD0;
 }
 
 .clockIocn{
@@ -35,7 +30,7 @@
 
 .inOutDetails {
     height: 185px;
-   
+    font-family: "Eastman-Regular";
 }
 
 .totalTime {
@@ -43,7 +38,8 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    margin-bottom: 5px; 
+    margin-bottom: 0px; 
+    font-family: "Eastman-Bold";
 }
 
 .time {
@@ -67,6 +63,7 @@
     font-weight: 500;
     margin: -5px; 
 }
+
 .playButton{
     height: 55px;
     width: 92%;
@@ -85,67 +82,99 @@
 }
 
 .ClockInButtonText{
-    margin-top: 17px;
+    margin-top: 10px;
     margin-left: 5px;
 }
 
 .records{
     height: 125px;
 }
+
 .todayTime{
     color: #000000;
     height: 25px;
 }
+
 .totalTimeText{
     font-size: 17px;
     font-weight: 500;
-    margin-left: 16px;
+    margin-left: 22px;
     color: #006069;
+    margin-top: 10px;
 }
 
 .inoutStatus {
-    height: 106px;
+    height: 97px;
     font-size: 17px;
     font-weight: 500;
     color: #006069;
     margin-right: 5px;
 }
 
-.demo{
+.demo {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    height: 28px;
-    padding:0px 0px 0px 15px;
+    align-items: center;
+    padding: 2px 0px 2px 24px;
     color: #000000;
-}
+    width: 100%;
+    margin-top: 10px;
+    box-sizing: border-box;
+    gap: 20px; /* spacing between items */
+    font-size: 14px;
+  }
+  
+  .demo span {
+    display: inline-flex;
+    align-items: center;
+    white-space: nowrap;
+    font-size: 14px;
+    line-height: 1;
+    margin: 0;
+    padding: 0;
+    width: 100px;
+  }
+  
+  .demo img {
+    height: 14px;
+    width: auto;
+    display: inline-block;
+    vertical-align: middle;
+    margin-right: 0px;
+  }
+  
+  .todayTotalTime {
+    font-weight: bold;
+    font-size: 14px;
+  }
+  
+  
 
 .main{
-    padding-top: 8px;
+    padding-top: 0px;
 }
 
 .buttonImg{
     height: 30px;
     width: 30px;
-    margin-top: 12px;
+    margin-top: 5px;
 }
 
 .scrollBar{
     height: 90px;
+    width: 90%;
 }
 
 .line{
     width: 9px;
     height: 10px;
-    margin-top: 25px,
+    margin-top: 5px;
+    margin-right: 20%;
 }
 
 .arrow{
     width: 13px;
     height: 10px;
-    margin-top: 25px;
+    margin-top: 5px;
+    
 }
 
-.todayTotalTime{
-    margin-right: 30%;
-}
