--- a/src/webparts/dashBoard/components/DashBoard.module.scss
+++ b/src/webparts/dashBoard/components/DashBoard.module.scss
@@ -9,26 +9,18 @@
     font-family: $ms-font-family-fallbacks;
   }
 }
-
-.welcome {
-  text-align: center;
+.searchContainer {
+  float: right;
+  width: 45%;
+  margin-top: 10px;
 }
-
-.welcomeImage {
+.Header{
   width: 100%;
-  max-width: 420px;
+  background-color: #1976d2;
+  height: 30px;
 }
-
-.links {
-  a {
-    text-decoration: none;
-    color: "[theme:link, default:#03787c]";
-    color: var(--link); // note: CSS Custom Properties support is limited to modern browsers only
-
-    &:hover {
-      text-decoration: underline;
-      color: "[theme:linkHovered, default: #014446]";
-      color: var(--linkHovered); // note: CSS Custom Properties support is limited to modern browsers only
-    }
-  }
+.popup{
+  background-color: #1976d2;
+  margin: 0px 2px 2px 2px;
+  height: 45px;
 }
